# backend/src/api/controllers/quote.ts
@@ -6,9 +6,22 @@ import * as NewQuotesDAL from "../../dal/new-quotes";
 import * as QuoteRatingsDAL from "../../dal/quote-ratings";
 import MonkeyError from "../../utils/error";
 import { verify } from "../../utils/captcha";
-import { MonkeyResponse } from "../../utils/monkey-response";
+import { MonkeyResponse2 } from "../../utils/monkey-response";
 import { ObjectId } from "mongodb";
 import { addLog } from "../../dal/logs";
+import {
+  AddQuoteRatingRequest,
+  AddQuoteRequest,
+  ApproveQuoteRequest,
+  ApproveQuoteResponse,
+  GetQuoteRatingQuery as GetQuoteRatingQuery,
+  GetQuoteRatingResponse,
+  GetQuotesResponse,
+  IsSubmissionEnabledResponse,
+  RejectQuoteRequest,
+  ReportQuoteRequest,
+} from "@monkeytype/contracts/quotes";
+import { replaceObjectIds } from "../../utils/misc";
 
 async function verifyCaptcha(captcha: string): Promise<void> {
   if (!(await verify(captcha))) {
@@ -17,12 +30,11 @@ async function verifyCaptcha(captcha: string): Promise<void> {
 }
 
 export async function getQuotes(
-  req: MonkeyTypes.Request
-): Promise<MonkeyResponse> {
+  req: MonkeyTypes.Request2
+): Promise<GetQuotesResponse> {
   const { uid } = req.ctx.decodedToken;
-  const quoteMod: boolean | undefined | string = (
-    await getPartialUser(uid, "get quotes", ["quoteMod"])
-  ).quoteMod;
+  const quoteMod = (await getPartialUser(uid, "get quotes", ["quoteMod"]))
+    .quoteMod;
   let quoteModString: string;
   if (quoteMod === true) {
     quoteModString = "all";
@@ -32,41 +44,39 @@ export async function getQuotes(
     throw new MonkeyError(403, "You are not allowed to view submitted quotes");
   }
   const data = await NewQuotesDAL.get(quoteModString);
-  return new MonkeyResponse("Quote submissions retrieved", data);
+  return new MonkeyResponse2(
+    "Quote submissions retrieved",
+    replaceObjectIds(data)
+  );
 }
 
 export async function isSubmissionEnabled(
-  req: MonkeyTypes.Request
-): Promise<MonkeyResponse> {
+  req: MonkeyTypes.Request2
+): Promise<IsSubmissionEnabledResponse> {
   const { submissionsEnabled } = req.ctx.configuration.quotes;
-  return new MonkeyResponse(
+  return new MonkeyResponse2(
     "Quote submission " + (submissionsEnabled ? "enabled" : "disabled"),
     { isEnabled: submissionsEnabled }
   );
 }
 
 export async function addQuote(
-  req: MonkeyTypes.Request
-): Promise<MonkeyResponse> {
+  req: MonkeyTypes.Request2<undefined, AddQuoteRequest>
+): Promise<MonkeyResponse2> {
   const { uid } = req.ctx.decodedToken;
   const { text, source, language, captcha } = req.body;
 
   await verifyCaptcha(captcha);
 
   await NewQuotesDAL.add(text, source, language, uid);
-  return new MonkeyResponse("Quote submission added");
+  return new MonkeyResponse2("Quote submission added", null);
 }
 
 export async function approveQuote(
-  req: MonkeyTypes.Request
-): Promise<MonkeyResponse> {
+  req: MonkeyTypes.Request2<undefined, ApproveQuoteRequest>
+): Promise<ApproveQuoteResponse> {
   const { uid } = req.ctx.decodedToken;
-  const { quoteId } = req.body;
-  let { editText, editSource } = req.body;
-
-  //TODO replace with zod transform
-  editText = editText !== null ? editText : undefined;
-  editSource = editSource !== null ? editSource : undefined;
+  const { quoteId, editText, editSource } = req.body;
 
   const { name } = await getPartialUser(uid, "approve quote", ["name"]);
 
@@ -77,46 +87,40 @@ export async function approveQuote(
   const data = await NewQuotesDAL.approve(quoteId, editText, editSource, name);
   void addLog("system_quote_approved", data, uid);
 
-  return new MonkeyResponse(data.message, data.quote);
+  return new MonkeyResponse2(data.message, data.quote);
 }
 
 export async function refuseQuote(
-  req: MonkeyTypes.Request
-): Promise<MonkeyResponse> {
+  req: MonkeyTypes.Request2<undefined, RejectQuoteRequest>
+): Promise<MonkeyResponse2> {
   const { quoteId } = req.body;
 
   await NewQuotesDAL.refuse(quoteId);
-  return new MonkeyResponse("Quote refused");
+  return new MonkeyResponse2("Quote refused", null);
 }
 
 export async function getRating(
-  req: MonkeyTypes.Request
-): Promise<MonkeyResponse> {
+  req: MonkeyTypes.Request2<GetQuoteRatingQuery>
+): Promise<GetQuoteRatingResponse> {
   const { quoteId, language } = req.query;
 
-  const data = await QuoteRatingsDAL.get(
-    parseInt(quoteId as string, 10),
-    language as string
-  );
+  const data = await QuoteRatingsDAL.get(quoteId, language);
 
-  return new MonkeyResponse("Rating retrieved", data);
+  return new MonkeyResponse2("Rating retrieved", data);
 }
 
 export async function submitRating(
-  req: MonkeyTypes.Request
-): Promise<MonkeyResponse> {
+  req: MonkeyTypes.Request2<undefined, AddQuoteRatingRequest>
+): Promise<MonkeyResponse2> {
   const { uid } = req.ctx.decodedToken;
   const { quoteId, rating, language } = req.body;
 
   const user = await getPartialUser(uid, "submit rating", ["quoteRatings"]);
 
-  const normalizedQuoteId = parseInt(quoteId as string, 10);
-  const normalizedRating = Math.round(parseInt(rating as string, 10));
-
   const userQuoteRatings = user.quoteRatings ?? {};
-  const currentRating = userQuoteRatings[language]?.[normalizedQuoteId] ?? 0;
+  const currentRating = userQuoteRatings[language]?.[quoteId] ?? 0;
 
-  const newRating = normalizedRating - currentRating;
+  const newRating = rating - currentRating;
   const shouldUpdateRating = currentRating !== 0;
 
   await QuoteRatingsDAL.submit(
@@ -126,24 +130,19 @@ export async function submitRating(
     shouldUpdateRating
   );
 
-  _.setWith(
-    userQuoteRatings,
-    `[${language}][${normalizedQuoteId}]`,
-    normalizedRating,
-    Object
-  );
+  _.setWith(userQuoteRatings, `[${language}][${quoteId}]`, rating, Object);
 
   await updateQuoteRatings(uid, userQuoteRatings);
 
   const responseMessage = `Rating ${
     shouldUpdateRating ? "updated" : "submitted"
   }`;
-  return new MonkeyResponse(responseMessage);
+  return new MonkeyResponse2(responseMessage, null);
 }
 
 export async function reportQuote(
-  req: MonkeyTypes.Request
-): Promise<MonkeyResponse> {
+  req: MonkeyTypes.Request2<undefined, ReportQuoteRequest>
+): Promise<MonkeyResponse2> {
   const { uid } = req.ctx.decodedToken;
   const {
     reporting: { maxReports, contentReportLimit },
@@ -161,10 +160,10 @@ export async function reportQuote(
     uid,
     contentId: `${quoteLanguage}-${quoteId}`,
     reason,
-    comment,
+    comment: comment ?? "",
   };
 
   await ReportDAL.createReport(newReport, maxReports, contentReportLimit);
 
-  return new MonkeyResponse("Quote reported");
+  return new MonkeyResponse2("Quote reported", null);
 }
