# backend/src/documentation/internal-swagger.json
@@ -26,10 +26,6 @@
     {
       "name": "results",
       "description": "Result data and related operations"
-    },
-    {
-      "name": "quotes",
-      "description": "Quote data and related operations"
     }
   ],
   "paths": {
@@ -480,226 +476,6 @@
                   }
                 },
                 "resultId": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/Response"
-            }
-          }
-        }
-      }
-    },
-    "/quotes": {
-      "get": {
-        "tags": ["quotes"],
-        "summary": "Gets a list of quote submissions",
-        "responses": {
-          "default": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/Response"
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": ["quotes"],
-        "summary": "Creates a quote submission",
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "text": {
-                  "type": "string"
-                },
-                "source": {
-                  "type": "string"
-                },
-                "language": {
-                  "type": "string"
-                },
-                "captcha": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/Response"
-            }
-          }
-        }
-      }
-    },
-    "/quotes/approve": {
-      "post": {
-        "tags": ["quotes"],
-        "summary": "Approves a quote submission",
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "quoteId": {
-                  "type": "string"
-                },
-                "editText": {
-                  "type": "string"
-                },
-                "editSource": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/Response"
-            }
-          }
-        }
-      }
-    },
-    "/quotes/reject": {
-      "post": {
-        "tags": ["quotes"],
-        "summary": "Rejects a quote submission",
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "quoteId": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/Response"
-            }
-          }
-        }
-      }
-    },
-    "/quotes/rating": {
-      "get": {
-        "tags": ["quotes"],
-        "summary": "Gets a rating for a quote",
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "quoteId": {
-                  "type": "string"
-                },
-                "language": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/Response"
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": ["quotes"],
-        "summary": "Adds a rating for a quote",
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "quoteId": {
-                  "type": "string"
-                },
-                "rating": {
-                  "type": "string"
-                },
-                "language": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/Response"
-            }
-          }
-        }
-      }
-    },
-    "/quotes/report": {
-      "post": {
-        "tags": ["quotes"],
-        "summary": "Reports a quote",
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "quoteId": {
-                  "type": "string"
-                },
-                "quoteLanguage": {
-                  "type": "string"
-                },
-                "reason": {
-                  "type": "string"
-                },
-                "comment": {
-                  "type": "string"
-                },
-                "captcha": {
                   "type": "string"
                 }
               }
